August_30/August_30/src/objects/Project_Files__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Customer Facing</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Version__c</fullName>
        <label>Document Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_location__c</fullName>
        <label>Document location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Life_Stage__c</fullName>
        <label>Life Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Project Files</relationshipLabel>
        <relationshipName>Project_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sf_Project_Id__c</fullName>
        <formula>Project_Name__r.SF_Project_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sf Project Id</label>
        <type>Text</type>
    </fields>
    <label>Project File</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Others</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_Type__c</columns>
        <columns>Document_location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Files__c.Others</value>
        </filters>
        <label>Others</label>
    </listViews>
    <listViews>
        <fullName>PreSales</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_Type__c</columns>
        <columns>Document_location__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Files__c.PreSales</value>
        </filters>
        <label>PreSales</label>
    </listViews>
    <listViews>
        <fullName>SDLC</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_Type__c</columns>
        <columns>Document_location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Files__c.SDLC</value>
        </filters>
        <label>SDLC</label>
    </listViews>
    <listViews>
        <fullName>UPMM</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_Type__c</columns>
        <columns>Document_location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Files__c.UPMM</value>
        </filters>
        <label>UPMM</label>
    </listViews>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>PreSales</fullName>
        <active>true</active>
        <label>PreSales</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDLC</fullName>
        <active>true</active>
        <label>SDLC</label>
    </recordTypes>
    <recordTypes>
        <fullName>UPMM</fullName>
        <active>true</active>
        <label>UPMM</label>
    </recordTypes>
</CustomObject>